// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Parser - XMLport ELEMENTS Section Snapshot tests should match snapshot for complete ELEMENTS section 1`] = `
{
  "elements": [
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "endToken": {
                "column": 66,
                "endOffset": 909,
                "line": 18,
                "startOffset": 908,
                "type": "RIGHT_BRACE",
                "value": "}",
              },
              "guid": "GUID-3",
              "indentLevel": 2,
              "name": "Code",
              "nodeType": "Attribute",
              "properties": {
                "endToken": {
                  "column": 61,
                  "endOffset": 907,
                  "line": 18,
                  "startOffset": 903,
                  "type": "CODE",
                  "value": "Code",
                },
                "properties": [
                  {
                    "endToken": {
                      "column": 62,
                      "endOffset": 842,
                      "line": 17,
                      "startOffset": 841,
                      "type": "SEMICOLON",
                      "value": ";",
                    },
                    "name": "DataType",
                    "startToken": {
                      "column": 49,
                      "endOffset": 836,
                      "line": 17,
                      "startOffset": 828,
                      "type": "IDENTIFIER",
                      "value": "DataType",
                    },
                    "type": "Property",
                    "value": "Code",
                    "valueTokens": [
                      {
                        "column": 58,
                        "endOffset": 841,
                        "line": 17,
                        "startOffset": 837,
                        "type": "CODE",
                        "value": "Code",
                      },
                    ],
                  },
                  {
                    "endToken": {
                      "column": 61,
                      "endOffset": 907,
                      "line": 18,
                      "startOffset": 903,
                      "type": "CODE",
                      "value": "Code",
                    },
                    "name": "SourceField",
                    "startToken": {
                      "column": 49,
                      "endOffset": 902,
                      "line": 18,
                      "startOffset": 891,
                      "type": "IDENTIFIER",
                      "value": "SourceField",
                    },
                    "type": "Property",
                    "value": "Code",
                    "valueTokens": [
                      {
                        "column": 61,
                        "endOffset": 907,
                        "line": 18,
                        "startOffset": 903,
                        "type": "CODE",
                        "value": "Code",
                      },
                    ],
                  },
                ],
                "startToken": {
                  "column": 49,
                  "endOffset": 836,
                  "line": 17,
                  "startOffset": 828,
                  "type": "IDENTIFIER",
                  "value": "DataType",
                },
                "type": "PropertySection",
              },
              "sourceType": "Field",
              "startToken": {
                "column": 11,
                "endOffset": 725,
                "line": 16,
                "startOffset": 724,
                "type": "LEFT_BRACE",
                "value": "{",
              },
              "triggers": null,
              "type": "XMLportElement",
            },
            {
              "children": [],
              "endToken": {
                "column": 69,
                "endOffset": 1174,
                "line": 22,
                "startOffset": 1173,
                "type": "RIGHT_BRACE",
                "value": "}",
              },
              "guid": "GUID-4",
              "indentLevel": 2,
              "name": "Name",
              "nodeType": "Attribute",
              "properties": {
                "endToken": {
                  "column": 60,
                  "endOffset": 1172,
                  "line": 22,
                  "startOffset": 1164,
                  "type": "IDENTIFIER",
                  "value": "Optional",
                },
                "properties": [
                  {
                    "endToken": {
                      "column": 62,
                      "endOffset": 1038,
                      "line": 20,
                      "startOffset": 1037,
                      "type": "SEMICOLON",
                      "value": ";",
                    },
                    "name": "DataType",
                    "startToken": {
                      "column": 49,
                      "endOffset": 1032,
                      "line": 20,
                      "startOffset": 1024,
                      "type": "IDENTIFIER",
                      "value": "DataType",
                    },
                    "type": "Property",
                    "value": "Text",
                    "valueTokens": [
                      {
                        "column": 58,
                        "endOffset": 1037,
                        "line": 20,
                        "startOffset": 1033,
                        "type": "TEXT",
                        "value": "Text",
                      },
                    ],
                  },
                  {
                    "endToken": {
                      "column": 65,
                      "endOffset": 1104,
                      "line": 21,
                      "startOffset": 1103,
                      "type": "SEMICOLON",
                      "value": ";",
                    },
                    "name": "SourceField",
                    "startToken": {
                      "column": 49,
                      "endOffset": 1098,
                      "line": 21,
                      "startOffset": 1087,
                      "type": "IDENTIFIER",
                      "value": "SourceField",
                    },
                    "type": "Property",
                    "value": "Name",
                    "valueTokens": [
                      {
                        "column": 61,
                        "endOffset": 1103,
                        "line": 21,
                        "startOffset": 1099,
                        "type": "IDENTIFIER",
                        "value": "Name",
                      },
                    ],
                  },
                  {
                    "endToken": {
                      "column": 60,
                      "endOffset": 1172,
                      "line": 22,
                      "startOffset": 1164,
                      "type": "IDENTIFIER",
                      "value": "Optional",
                    },
                    "name": "Occurrence",
                    "startToken": {
                      "column": 49,
                      "endOffset": 1163,
                      "line": 22,
                      "startOffset": 1153,
                      "type": "IDENTIFIER",
                      "value": "Occurrence",
                    },
                    "type": "Property",
                    "value": "Optional",
                    "valueTokens": [
                      {
                        "column": 60,
                        "endOffset": 1172,
                        "line": 22,
                        "startOffset": 1164,
                        "type": "IDENTIFIER",
                        "value": "Optional",
                      },
                    ],
                  },
                ],
                "startToken": {
                  "column": 49,
                  "endOffset": 1032,
                  "line": 20,
                  "startOffset": 1024,
                  "type": "IDENTIFIER",
                  "value": "DataType",
                },
                "type": "PropertySection",
              },
              "sourceType": "Field",
              "startToken": {
                "column": 11,
                "endOffset": 921,
                "line": 19,
                "startOffset": 920,
                "type": "LEFT_BRACE",
                "value": "{",
              },
              "triggers": null,
              "type": "XMLportElement",
            },
          ],
          "endToken": {
            "column": 79,
            "endOffset": 713,
            "line": 15,
            "startOffset": 712,
            "type": "RIGHT_BRACE",
            "value": "}",
          },
          "guid": "GUID-2",
          "indentLevel": 1,
          "name": "DataExchDef",
          "nodeType": "Element",
          "properties": {
            "endToken": {
              "column": 81,
              "endOffset": 633,
              "line": 14,
              "startOffset": 632,
              "type": "SEMICOLON",
              "value": ";",
            },
            "properties": [
              {
                "endToken": {
                  "column": 70,
                  "endOffset": 313,
                  "line": 10,
                  "startOffset": 312,
                  "type": "SEMICOLON",
                  "value": ";",
                },
                "name": "SourceTable",
                "startToken": {
                  "column": 49,
                  "endOffset": 302,
                  "line": 10,
                  "startOffset": 291,
                  "type": "IDENTIFIER",
                  "value": "SourceTable",
                },
                "type": "Property",
                "value": "Table1222",
                "valueTokens": [
                  {
                    "column": 61,
                    "endOffset": 312,
                    "line": 10,
                    "startOffset": 303,
                    "type": "IDENTIFIER",
                    "value": "Table1222",
                  },
                ],
              },
              {
                "endToken": {
                  "column": 63,
                  "endOffset": 377,
                  "line": 11,
                  "startOffset": 376,
                  "type": "SEMICOLON",
                  "value": ";",
                },
                "name": "MinOccurs",
                "startToken": {
                  "column": 49,
                  "endOffset": 371,
                  "line": 11,
                  "startOffset": 362,
                  "type": "IDENTIFIER",
                  "value": "MinOccurs",
                },
                "type": "Property",
                "value": "Zero",
                "valueTokens": [
                  {
                    "column": 59,
                    "endOffset": 376,
                    "line": 11,
                    "startOffset": 372,
                    "type": "IDENTIFIER",
                    "value": "Zero",
                  },
                ],
              },
            ],
            "startToken": {
              "column": 49,
              "endOffset": 302,
              "line": 10,
              "startOffset": 291,
              "type": "IDENTIFIER",
              "value": "SourceTable",
            },
            "type": "PropertySection",
          },
          "sourceType": "Table",
          "startToken": {
            "column": 11,
            "endOffset": 188,
            "line": 9,
            "startOffset": 187,
            "type": "LEFT_BRACE",
            "value": "{",
          },
          "triggers": [
            {
              "body": [
                {
                  "endToken": {
                    "column": 90,
                    "endOffset": 551,
                    "line": 13,
                    "startOffset": 550,
                    "type": "SEMICOLON",
                    "value": ";",
                  },
                  "expression": {
                    "arguments": [],
                    "callee": {
                      "endToken": {
                        "column": 80,
                        "endOffset": 548,
                        "line": 13,
                        "startOffset": 540,
                        "type": "IDENTIFIER",
                        "value": "Validate",
                      },
                      "isQuoted": false,
                      "name": "Validate",
                      "startToken": {
                        "column": 80,
                        "endOffset": 548,
                        "line": 13,
                        "startOffset": 540,
                        "type": "IDENTIFIER",
                        "value": "Validate",
                      },
                      "type": "Identifier",
                    },
                    "endToken": {
                      "column": 89,
                      "endOffset": 550,
                      "line": 13,
                      "startOffset": 549,
                      "type": "RIGHT_PAREN",
                      "value": ")",
                    },
                    "startToken": {
                      "column": 80,
                      "endOffset": 548,
                      "line": 13,
                      "startOffset": 540,
                      "type": "IDENTIFIER",
                      "value": "Validate",
                    },
                    "type": "CallExpression",
                  },
                  "startToken": {
                    "column": 80,
                    "endOffset": 548,
                    "line": 13,
                    "startOffset": 540,
                    "type": "IDENTIFIER",
                    "value": "Validate",
                  },
                  "type": "CallStatement",
                },
              ],
              "endToken": {
                "column": 81,
                "endOffset": 633,
                "line": 14,
                "startOffset": 632,
                "type": "SEMICOLON",
                "value": ";",
              },
              "name": "Import::OnBeforeInsertRecord",
              "startToken": {
                "column": 49,
                "endOffset": 432,
                "line": 12,
                "startOffset": 426,
                "type": "IDENTIFIER",
                "value": "Import",
              },
              "type": "TriggerDeclaration",
              "variables": [],
            },
          ],
          "type": "XMLportElement",
        },
      ],
      "endToken": {
        "column": 66,
        "endOffset": 176,
        "line": 8,
        "startOffset": 175,
        "type": "RIGHT_BRACE",
        "value": "}",
      },
      "guid": "GUID-1",
      "indentLevel": 0,
      "name": "root",
      "nodeType": "Element",
      "properties": null,
      "sourceType": "Text",
      "startToken": {
        "column": 11,
        "endOffset": 121,
        "line": 8,
        "startOffset": 120,
        "type": "LEFT_BRACE",
        "value": "{",
      },
      "triggers": null,
      "type": "XMLportElement",
    },
  ],
  "endToken": {
    "column": 9,
    "endOffset": 1184,
    "line": 23,
    "startOffset": 1183,
    "type": "RIGHT_BRACE",
    "value": "}",
  },
  "startToken": {
    "column": 9,
    "endOffset": 99,
    "line": 6,
    "startOffset": 91,
    "type": "ELEMENTS",
    "value": "ELEMENTS",
  },
  "type": "ElementsSection",
}
`;

exports[`Parser - XMLport ELEMENTS Section Snapshot tests should match snapshot for nested hierarchy 1`] = `
{
  "elements": [
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "endToken": {
                "column": 65,
                "endOffset": 444,
                "line": 12,
                "startOffset": 443,
                "type": "RIGHT_BRACE",
                "value": "}",
              },
              "guid": "GUID-3",
              "indentLevel": 2,
              "name": "field1",
              "nodeType": "Attribute",
              "properties": {
                "endToken": {
                  "column": 63,
                  "endOffset": 442,
                  "line": 12,
                  "startOffset": 441,
                  "type": "DOT",
                  "value": ".",
                },
                "properties": [
                  {
                    "endToken": {
                      "column": 63,
                      "endOffset": 442,
                      "line": 12,
                      "startOffset": 441,
                      "type": "DOT",
                      "value": ".",
                    },
                    "name": "SourceField",
                    "startToken": {
                      "column": 49,
                      "endOffset": 438,
                      "line": 12,
                      "startOffset": 427,
                      "type": "IDENTIFIER",
                      "value": "SourceField",
                    },
                    "type": "Property",
                    "value": "No.",
                    "valueTokens": [
                      {
                        "column": 61,
                        "endOffset": 441,
                        "line": 12,
                        "startOffset": 439,
                        "type": "IDENTIFIER",
                        "value": "No",
                      },
                      {
                        "column": 63,
                        "endOffset": 442,
                        "line": 12,
                        "startOffset": 441,
                        "type": "DOT",
                        "value": ".",
                      },
                    ],
                  },
                ],
                "startToken": {
                  "column": 49,
                  "endOffset": 438,
                  "line": 12,
                  "startOffset": 427,
                  "type": "IDENTIFIER",
                  "value": "SourceField",
                },
                "type": "PropertySection",
              },
              "sourceType": "Field",
              "startToken": {
                "column": 11,
                "endOffset": 324,
                "line": 11,
                "startOffset": 323,
                "type": "LEFT_BRACE",
                "value": "{",
              },
              "triggers": null,
              "type": "XMLportElement",
            },
            {
              "children": [],
              "endToken": {
                "column": 66,
                "endOffset": 577,
                "line": 14,
                "startOffset": 576,
                "type": "RIGHT_BRACE",
                "value": "}",
              },
              "guid": "GUID-4",
              "indentLevel": 2,
              "name": "field2",
              "nodeType": "Attribute",
              "properties": {
                "endToken": {
                  "column": 61,
                  "endOffset": 575,
                  "line": 14,
                  "startOffset": 571,
                  "type": "IDENTIFIER",
                  "value": "Name",
                },
                "properties": [
                  {
                    "endToken": {
                      "column": 61,
                      "endOffset": 575,
                      "line": 14,
                      "startOffset": 571,
                      "type": "IDENTIFIER",
                      "value": "Name",
                    },
                    "name": "SourceField",
                    "startToken": {
                      "column": 49,
                      "endOffset": 570,
                      "line": 14,
                      "startOffset": 559,
                      "type": "IDENTIFIER",
                      "value": "SourceField",
                    },
                    "type": "Property",
                    "value": "Name",
                    "valueTokens": [
                      {
                        "column": 61,
                        "endOffset": 575,
                        "line": 14,
                        "startOffset": 571,
                        "type": "IDENTIFIER",
                        "value": "Name",
                      },
                    ],
                  },
                ],
                "startToken": {
                  "column": 49,
                  "endOffset": 570,
                  "line": 14,
                  "startOffset": 559,
                  "type": "IDENTIFIER",
                  "value": "SourceField",
                },
                "type": "PropertySection",
              },
              "sourceType": "Field",
              "startToken": {
                "column": 11,
                "endOffset": 456,
                "line": 13,
                "startOffset": 455,
                "type": "LEFT_BRACE",
                "value": "{",
              },
              "triggers": null,
              "type": "XMLportElement",
            },
          ],
          "endToken": {
            "column": 69,
            "endOffset": 312,
            "line": 10,
            "startOffset": 311,
            "type": "RIGHT_BRACE",
            "value": "}",
          },
          "guid": "GUID-2",
          "indentLevel": 1,
          "name": "table1",
          "nodeType": "Element",
          "properties": {
            "endToken": {
              "column": 61,
              "endOffset": 310,
              "line": 10,
              "startOffset": 303,
              "type": "IDENTIFIER",
              "value": "Table18",
            },
            "properties": [
              {
                "endToken": {
                  "column": 61,
                  "endOffset": 310,
                  "line": 10,
                  "startOffset": 303,
                  "type": "IDENTIFIER",
                  "value": "Table18",
                },
                "name": "SourceTable",
                "startToken": {
                  "column": 49,
                  "endOffset": 302,
                  "line": 10,
                  "startOffset": 291,
                  "type": "IDENTIFIER",
                  "value": "SourceTable",
                },
                "type": "Property",
                "value": "Table18",
                "valueTokens": [
                  {
                    "column": 61,
                    "endOffset": 310,
                    "line": 10,
                    "startOffset": 303,
                    "type": "IDENTIFIER",
                    "value": "Table18",
                  },
                ],
              },
            ],
            "startToken": {
              "column": 49,
              "endOffset": 302,
              "line": 10,
              "startOffset": 291,
              "type": "IDENTIFIER",
              "value": "SourceTable",
            },
            "type": "PropertySection",
          },
          "sourceType": "Table",
          "startToken": {
            "column": 11,
            "endOffset": 188,
            "line": 9,
            "startOffset": 187,
            "type": "LEFT_BRACE",
            "value": "{",
          },
          "triggers": null,
          "type": "XMLportElement",
        },
        {
          "children": [
            {
              "children": [],
              "endToken": {
                "column": 66,
                "endOffset": 846,
                "line": 18,
                "startOffset": 845,
                "type": "RIGHT_BRACE",
                "value": "}",
              },
              "guid": "GUID-6",
              "indentLevel": 2,
              "name": "field3",
              "nodeType": "Attribute",
              "properties": {
                "endToken": {
                  "column": 61,
                  "endOffset": 844,
                  "line": 18,
                  "startOffset": 840,
                  "type": "CODE",
                  "value": "Code",
                },
                "properties": [
                  {
                    "endToken": {
                      "column": 61,
                      "endOffset": 844,
                      "line": 18,
                      "startOffset": 840,
                      "type": "CODE",
                      "value": "Code",
                    },
                    "name": "SourceField",
                    "startToken": {
                      "column": 49,
                      "endOffset": 839,
                      "line": 18,
                      "startOffset": 828,
                      "type": "IDENTIFIER",
                      "value": "SourceField",
                    },
                    "type": "Property",
                    "value": "Code",
                    "valueTokens": [
                      {
                        "column": 61,
                        "endOffset": 844,
                        "line": 18,
                        "startOffset": 840,
                        "type": "CODE",
                        "value": "Code",
                      },
                    ],
                  },
                ],
                "startToken": {
                  "column": 49,
                  "endOffset": 839,
                  "line": 18,
                  "startOffset": 828,
                  "type": "IDENTIFIER",
                  "value": "SourceField",
                },
                "type": "PropertySection",
              },
              "sourceType": "Field",
              "startToken": {
                "column": 11,
                "endOffset": 725,
                "line": 17,
                "startOffset": 724,
                "type": "LEFT_BRACE",
                "value": "{",
              },
              "triggers": null,
              "type": "XMLportElement",
            },
          ],
          "endToken": {
            "column": 69,
            "endOffset": 713,
            "line": 16,
            "startOffset": 712,
            "type": "RIGHT_BRACE",
            "value": "}",
          },
          "guid": "GUID-5",
          "indentLevel": 1,
          "name": "table2",
          "nodeType": "Element",
          "properties": {
            "endToken": {
              "column": 61,
              "endOffset": 711,
              "line": 16,
              "startOffset": 704,
              "type": "IDENTIFIER",
              "value": "Table19",
            },
            "properties": [
              {
                "endToken": {
                  "column": 61,
                  "endOffset": 711,
                  "line": 16,
                  "startOffset": 704,
                  "type": "IDENTIFIER",
                  "value": "Table19",
                },
                "name": "SourceTable",
                "startToken": {
                  "column": 49,
                  "endOffset": 703,
                  "line": 16,
                  "startOffset": 692,
                  "type": "IDENTIFIER",
                  "value": "SourceTable",
                },
                "type": "Property",
                "value": "Table19",
                "valueTokens": [
                  {
                    "column": 61,
                    "endOffset": 711,
                    "line": 16,
                    "startOffset": 704,
                    "type": "IDENTIFIER",
                    "value": "Table19",
                  },
                ],
              },
            ],
            "startToken": {
              "column": 49,
              "endOffset": 703,
              "line": 16,
              "startOffset": 692,
              "type": "IDENTIFIER",
              "value": "SourceTable",
            },
            "type": "PropertySection",
          },
          "sourceType": "Table",
          "startToken": {
            "column": 11,
            "endOffset": 589,
            "line": 15,
            "startOffset": 588,
            "type": "LEFT_BRACE",
            "value": "{",
          },
          "triggers": null,
          "type": "XMLportElement",
        },
      ],
      "endToken": {
        "column": 66,
        "endOffset": 176,
        "line": 8,
        "startOffset": 175,
        "type": "RIGHT_BRACE",
        "value": "}",
      },
      "guid": "GUID-1",
      "indentLevel": 0,
      "name": "root",
      "nodeType": "Element",
      "properties": null,
      "sourceType": "Text",
      "startToken": {
        "column": 11,
        "endOffset": 121,
        "line": 8,
        "startOffset": 120,
        "type": "LEFT_BRACE",
        "value": "{",
      },
      "triggers": null,
      "type": "XMLportElement",
    },
  ],
  "endToken": {
    "column": 9,
    "endOffset": 856,
    "line": 19,
    "startOffset": 855,
    "type": "RIGHT_BRACE",
    "value": "}",
  },
  "startToken": {
    "column": 9,
    "endOffset": 99,
    "line": 6,
    "startOffset": 91,
    "type": "ELEMENTS",
    "value": "ELEMENTS",
  },
  "type": "ElementsSection",
}
`;
